# bayesian-sysid

./: README.md  pyproject.toml
docs/: controls_addons_research_plan.md  final_report.md  final_report_outline.md  repo_audit_and_expansion_plan.md  roadmap_status.md
examples/: demo_arx.py  demo_dsf_scaffold.py  demo_metrics_diagnostics.py  demo_observer_and_bayesian_gramians.py  demo_online_arx.py  demo_posterior_nyquist_band.py  demo_realization.ipynb  demo_stability_and_robustness.py  demo_uncertainty_insufficient_information.ipynb  demo_uncertainty_insufficient_information.py
examples/artifacts/: README.md  observer_demo_equations.md  observer_demo_summary.csv
examples/artifacts/dsf/: edge_magnitude_recovery.csv  edge_probability_table.csv  equations.md  validation_report.txt
examples/examples/: demo_posterior_nyquist_band.py
scripts/: check_docs_consistency.py
src/bayes_sysid/: __init__.py  arx.py  metrics.py  mimo.py  models.py  online.py  priors.py  regression.py  selection.py  simulate.py
src/bayes_sysid/analysis/: __init__.py  frequency_response.py  stability.py
src/bayes_sysid/control/: __init__.py  closed_loop.py  dsf.py  (+9 more)
src/bayesian_arx_sysid.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_api_structure.py  test_arx.py  test_closed_loop_control.py  test_controller_tuning.py  test_dsf.py  test_frequency_response.py  test_gramians.py  test_lft.py  test_lqg.py  test_lqr.py  test_metrics.py  test_mimo.py  test_observer.py  test_online.py  test_realization.py  test_robust_margins.py  test_simulate.py  test_stability_analysis.py
